# c4

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  release-please-config.json
.claude-plugin/: CHANGELOG.md  marketplace.json
.github/workflows/: ci.yml  release.yml
_schema/: c4.schema.json  component.schema.json  container.schema.json  deployment.schema.json  flow.schema.json  mod.schema.json  person.schema.json  relationship.schema.json  system.schema.json
examples/enterprise/: c4.mod.yaml
examples/enterprise/deployments/: production.yaml  staging.yaml
examples/simple/: c4.mod.yaml
examples/simple/shared/: personas.yaml
frontend/: CLAUDE.md  PHASE9_SUMMARY.md  index.html  lefthook.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/src/: App.tsx  index.css
plugins/c4/: CHANGELOG.md  plugin.json
src/: lib.rs  main.rs
src/cli/: build.rs  init.rs  mod.rs  serve.rs  validate.rs
src/exporter/: html.rs  images.rs  json.rs  mod.rs
src/model/: mod.rs  types.rs
src/parser/: file.rs  mod.rs  parser.rs  resolver.rs  writer.rs
src/server/: docs.rs  hub.rs  mod.rs  watcher.rs
testdata/valid/: c4.mod.yaml
tests/: integration_tests.rs
tests/cli/: build_tests.rs  init_tests.rs  mod.rs  mod_tests.rs  serve_tests.rs  validate_tests.rs
tests/exporter/: html_tests.rs  images_tests.rs  json_tests.rs  mod.rs
tests/parser/: file_tests.rs  mod.rs  parser_tests.rs  resolver_tests.rs  writer_tests.rs
(+143 files in other folders)
