[package]
name = "c4"
version = "0.1.1"
edition = "2021"
authors = ["C4 Contributors"]
description = "C4 architecture visualization tool - parse, visualize, and export C4 models"
license = "MIT"
repository = "https://github.com/panbanda/c4"

[[bin]]
name = "c4"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Glob patterns
glob = "0.3"

# Markdown rendering
pulldown-cmark = "0.9"
syntect = "5.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.19"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }

# Static file embedding
rust-embed = "8.2"

[dev-dependencies]
# Testing
pretty_assertions = "1.4"
tempfile = "3.9"
tokio-test = "0.4"
rstest = "0.18"
mockall = "0.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
